exports[`test should render a default table row 1`] = `
<tr
  aria-selected={false}
  className="row">
  <TableCell
    content="John Smith" />
  <TableCell
    content="123 Adams Drive" />
  <TableCell
    content="111-222-3333" />
</tr>
`;

exports[`test should render a selectable table row 1`] = `
<tr
  aria-selected={false}
  className="is-selectable row">
  <TableCell
    content="John Smith" />
  <TableCell
    content="123 Adams Drive" />
  <TableCell
    content="111-222-3333" />
</tr>
`;

exports[`test should render a selected table row 1`] = `
<tr
  aria-selected={true}
  className="is-selected row">
  <TableCell
    content="John Smith" />
  <TableCell
    content="123 Adams Drive" />
  <TableCell
    content="111-222-3333" />
</tr>
`;
